[tool.poetry]
name = "multi-qlora"
version = "0.1.0"
description = ""
authors = ["akkky02 <akshatpatil7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
vllm = "^0.4.3"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"
nvitop = "^1.3.2"
python-dotenv = "^1.0.1"
lorax-client = "^0.6.0"
datasets = "^2.19.2"
llmperf = {path = "llmperf"}
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
